# RSplitCap

./: .gitignore  CLAUDE.md  Cargo.toml  EXECUTION_STEPS.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_rsplitcap.py
bench/bench_report/: report.html  report.json
bench/win_bench_report/: report.html  report.json
python/: rsplit_pipe_reader.py
python/rsplitcap/: __init__.py  __init__.pyi
src/: cli.rs  filter.rs  lib.rs  main.rs  packet.rs
src/archive/: mod.rs  reader.rs  writer.rs
src/flow/: mod.rs  strategy.rs
src/output/: mod.rs  split.rs
src/parser/: mod.rs  pcap.rs  pcapng.rs
src/python/: mod.rs
tests/: fuzz_parsers.rs  integration.rs
