[package]
name = "rsplitcap"
version = "0.1.0"
edition = "2021"
description = "A fast PCAP/PCAP-NG splitter with archive capabilities, 100% compatible with SplitCap"

[lib]
name = "rsplitcap"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rsplitcap"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
clap = { version = "4", features = ["derive"] }
bytes = "1"
pcap-file = "2"
pnet_packet = "0.35"
anyhow = "1"
thiserror = "2"
hashbrown = "0.15"
fxhash = "0.2"
crossbeam-channel = "0.5"
dashmap = "6"
memmap2 = "0.9"
leb128 = "0.2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3 = { version = "0.23", features = ["abi3-py38", "extension-module"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dev-dependencies]
tempfile = "3"
